# llmtranslate

./: .gitignore  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: mkdocs.yml  pyproject.toml  requirements.txt
docs/docs/: index.md
docs/docs/Supported languages/: gpt-4o-mini.md  gpt-4o.md
docs/docs/Tutorial/: Choosing OpenAI Model for Translation.md  Quick Start Guide.md  TranslatorMistralCloud.md  TranslatorOpenSource.md
docs/docs/cos/: cos.md
llm_translate/: exceptions.py  translator.py
llm_translate/utils/: available_languages.py  enums.py  iso639_1.py  text_splitter.py
llmtranslate/: __init__.py  exceptions.py  translator.py
llmtranslate/benchmark/: benchmark_core.py  format_benchmark_output.py  short_benchmark.py  short_text.py  to_del.py
llmtranslate/benchmark/data/: short_text.py  short_text_data.py
llmtranslate/utils/: available_languages.py  enums.py  iso639_1.py
myNotes/: README.md  docker-compose.yaml  docker-compose2.yaml
my_notes/my_benchmark_tests/: short_benchmark_testt.py
my_notes/my_tests/: mistral_code.py  my_code_v3.py  my_text_generation_interface_v2.py  new_langchain_test.py  testt_new_translator.py  testt_new_translator_async.py
tests/: mistral_code.py  mojj.py  my_code.py  my_code_v3.py  my_codev2.py  my_test_asyncio_translate.py  my_text_generation_inference.py  new_langchain_test.py  open_source.py  open_source_v3.py  open_source_v4.py  open_source_v5.py  show_supported_languages.py  test_available_languages.py  test_benchmark_core.py  test_get_text_language_multiple_languages.py  test_text_splitter.py  test_translator.py
tests/benchmark/: create_readme_format_test_text.txt  test_benchmark_core.py  test_benchmark_output.py
tests/my_tests/: langchain_test.py  langchain_test_v2.py  langchain_test_v3.py  langchain_test_v4.py  my_code.py  my_test_asyncio_translatev2.py  open_source.py  open_source_v2.py  testt_new_translator.py  testt_new_translator_async.py
