[tool.poetry]
name = "llmtranslate"
version = "0.3.7"
description = "A Python library for language detection and translation using OpenAI's GPT-4o."
authors = ["Adam Pawelek <adam.pwk@outlook.com>"]
readme = "README.md"

[tool.poetry.urls]
documentation = "https://llm-translate.com/"
source = "https://github.com/adam-pawelek/llmtranslate"

[tool.poetry.dependencies]
python = "^3.10"
openai = ">1.40.1,<1.47"
pytest = "^8.2.2"
asyncio = "^3.4.3"
pytest-asyncio = "^0.23.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
