[tool.poetry]
name = "llmtranslate"
version = "0.7.13"
description = "A Python library for language detection and translation using langchain ChatModels"
authors = ["Adam Pawelek <adam.pwk@outlook.com>"]
readme = "README.md"

[tool.poetry.urls]
documentation = "https://llm-translate.com/"
source = "https://github.com/adam-pawelek/llmtranslate"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
aiohttp = "^3.10.9"
langchain = "^0.3.14"
langchain-core = "^0.3.32"




[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.8"
langchain-openai = "^0.3.0"
langchain-anthropic ="^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
