[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Adam Pawełek <adam.pwk@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.5.36"
pygments = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
